--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "personalised-ai-model",
-  "version": "1.0.0",
+  "name": "personalized-qi",
+  "version": "20.17.0",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,12 +13,13 @@
     "axios": "^1.2.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
     "react-router-dom": "^6.27.0",
-    "transformers": "^3.1.0"
+    "transformers": "^1.8.3"
   },
   "description": ""
 }
