--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "personalized",
+  "name": "personalized-ai",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "react-script start"
   },
   "dependencies": {
     "axios": "^1.7.7",
