--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
     "react-bootstrap": "^2.10.5"
-  }
+  },
+  "devDependencies": {
+    "concurrently": "^9.0.1"
+  },
+  
+    "version": "1.0.0",
+    "scripts": {
+      "frontend": "cd frontend && npm start",
+      "backend": "cd backend && npm start",
+      "dev": "concurrently \"npm run frontend\" \"npm run backend\""
+    }
+  
 }
